Modify site configuration and author details
Updated personal information and site settings in _config.yml.

--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,14 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Your Name / Site Title"
+site_theme               : "default" # 暂时保持 default，以后想换颜色可以改成 "minimal" 或 "contrast" 试试
+title                    : "LIANG Haochen's Homepage" # 浏览器标签页显示的标题
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
-                                                           # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+name                     : &name "LIANG Haochen" # 网页左上角显示的名字
+description              : &description "Ph.D. Student at the University of Tokyo (UTokyo)" # SEO描述，方便谷歌搜索
+url: "https://UTokyoRyo.github.io"
+baseurl: ""
+repository: "UTokyoRyo/UTokyoRyo.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,18 +23,18 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "LIANG Haochen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Ph.D. Student @ UTokyo"
+  location         : "Tokyo, Japan"
+  employer         : "The University of Tokyo"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "lianghc829@gmail.com" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=tq_za08AAAAJ&hl=zh-CN&authuser=1"
   inspire-hep      : # URL
   impactstory      : # URL
   orcid            : "https://orcid.org/yourorcidurl"
@@ -66,7 +65,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/haochen-liang-275447383/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
